Now checking for itemsadderitemsload event